@@ -4,6 +4,7 @@ Changes in 2.1.6
 * FIX: afpd: Fix for LDAP user cache corruption
 * FIX: gentoo: cannot set $CNID_CONFIG
 * FIX: ubuntu: servername was empty
+* UPD: afpd: return version info with machine type in DSIGetStatus
 
 Changes in 2.1.5
 ================
